--- a/cost_optimization/ptn_4_ml-inference-chip/inf1-bert-compile-and-deploy.ipynb
+++ b/cost_optimization/ptn_4_ml-inference-chip/inf1-bert-compile-and-deploy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "12c28dd1",
+   "id": "8fec4d50",
    "metadata": {},
    "source": [
     "# Compiling HuggingFace models for AWS Inferentia"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d634d36",
+   "id": "306013af",
    "metadata": {},
    "source": [
     "AWS Inferentia는 저렴한 비용으로 높은 처리량(throughput)과 짧은 레이턴시(low latency)의 추론 성능을 제공하기 위해 AWS에서 개발한 머신 러닝 추론 칩입니다. Inferentia 칩은 최신형 커스텀 2세대 Intel® Xeon® 프로세서 및 100Gbps 네트워킹과 결합되어 머신 러닝 추론 애플리케이션을 위한 고성능 및 업계에서 가장 낮은 비용을 제공합니다. AWS Inferentia 기반 Amazon EC2 Inf1 인스턴스는 Inferentia 칩에서 머신 러닝 모델을 컴파일&최적화할 수 있는 AWS Neuron 컴파일러, 런타임 및 프로파일링 도구가 포함되어 있습니다.\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e528d71",
+   "id": "a6f1f8ac",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f89d5025",
+   "id": "2ab7f502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "814acc44",
+   "id": "06037498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22ae6707",
+   "id": "d22280e4",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63fafcf0",
+   "id": "c09ee8e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26f7da22",
+   "id": "42a6ede8",
    "metadata": {},
    "source": [
     "### Understanding our inference code\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b82e1f12",
+   "id": "3085f066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6391409f",
+   "id": "75625d02",
    "metadata": {},
    "source": [
     "#### For Inf1 instnace\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b55fcb4",
+   "id": "4aeb2dab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d60cc836",
+   "id": "62bfa646",
    "metadata": {},
    "source": [
     "문장 유사도를 판별하기 위한 3개의 샘플 문장들입니다."
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e375ff21",
+   "id": "b4f5541e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe84de93",
+   "id": "71fd00cf",
    "metadata": {},
    "source": [
     "모델 추론 결과를 확인합니다. SageMaker 호스팅 인스턴스에 배포하기 위한 인터페이스를 구현 후 디버깅하는 것이 좋은 전략입니다."
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46881a6a",
+   "id": "733c9cd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9651675",
+   "id": "beb444a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "021897c4",
+   "id": "938f7e7b",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8cea752",
+   "id": "ceb88dc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3835706a",
+   "id": "fbcafcf3",
    "metadata": {},
    "source": [
     "`model_neuron.graph`로 CPU에서 실행 중인 부분과 가속기에서 실행 중인 부분을 확인할 수 있습니다."
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a03300fb",
+   "id": "7b3217c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7888c5cd",
+   "id": "2dd6d144",
    "metadata": {},
    "source": [
     "Neuron으로 컴파일된 모델과 일반 인스턴스에서 사용할 0바이트의 더미 모델을 각각 `model.tar.gz`로 아카이빙하여 S3로 복사합니다."
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d54a28b",
+   "id": "cfc06661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13c0d8aa",
+   "id": "513d2ff7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b49d353",
+   "id": "7b433d5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "267a9d5b",
+   "id": "e13e5878",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af76de2",
+   "id": "e0b07308",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f606cf5a",
+   "id": "dcd56b58",
    "metadata": {},
    "source": [
     "### [Optional] Deploying Model on Local\n",
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca152932",
+   "id": "6b60c9a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3bdf014",
+   "id": "b8b9faa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20756915",
+   "id": "aac9a820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c3ed2be",
+   "id": "82d53753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "131a005c",
+   "id": "0055104a",
    "metadata": {},
    "source": [
     "### Deploying Model on g4dn Instance"
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba4b45c",
+   "id": "8b7bb881",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5adf9017",
+   "id": "08eca2ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c1e7cf",
+   "id": "bcf9f09b",
    "metadata": {},
    "source": [
     "### Deploying Model on Inf1 Instance"
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7112825",
+   "id": "416705e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9a1a2d1",
+   "id": "75caeda8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff1ca0a7",
+   "id": "cb7ab33b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5a35cd5",
+   "id": "ef9763ac",
    "metadata": {},
    "source": [
     "### Wait for the endpoint jobs to complete\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a873f8e5",
+   "id": "76e1a40f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aefdccbe",
+   "id": "464e6c2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e49859",
+   "id": "952e8161",
    "metadata": {},
    "source": [
     "### Inference Test\n",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acf4e266",
+   "id": "e9314ee8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e69cd42",
+   "id": "541ce73b",
    "metadata": {},
    "source": [
     "#### For g4dn instance"
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc9af11",
+   "id": "23398851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d87c3d3",
+   "id": "4b7aa502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f075865",
+   "id": "018b834a",
    "metadata": {},
    "source": [
     "#### For Inf1 instance"
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e538ffeb",
+   "id": "b65e3214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c869839",
+   "id": "5f97d84d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21a02066",
+   "id": "b427dc5b",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e3006de",
+   "id": "a00c482e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f25c650c",
+   "id": "072be2ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f28af78d",
+   "id": "88b599bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d08e3b94",
+   "id": "2013a19c",
    "metadata": {},
    "source": [
     "### For g4dn instance"
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1803a604",
+   "id": "faf7c538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41016508",
+   "id": "847fba14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ea36772",
+   "id": "e8d82e94",
    "metadata": {},
    "source": [
     "### For Inf1 instnace"
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad6b39ac",
+   "id": "d050789c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82cd4786",
+   "id": "0936ead8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364650b6",
+   "id": "4b4465fd",
    "metadata": {},
    "source": [
     "### Wrap-up\n",
@@ -990,38 +990,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02278c98",
-   "metadata": {},
-   "source": [
-    "## Clean-up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a1178e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor.delete_endpoint()\n",
-    "predictor.delete_model()\n",
-    "neuron_predictor.delete_endpoint()\n",
-    "neuron_predictor.delete_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a686d44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm -rf compilation_artifacts {model_dir} {model_neuron_dir}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a838b78b",
+   "id": "a2181ea8",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -1033,23 +1002,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efdad87e",
+   "id": "7139c819",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor.delete_model()\n",
-    "predictor.delete_endpoint()"
+    "predictor.delete_endpoint()\n",
+    "sm_model.delete_model()\n",
+    "neuron_predictor.delete_endpoint()\n",
+    "sm_neuron_model.delete_model()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e308b07e",
+   "id": "ed7577ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "neuron_predictor.delete_model()\n",
-    "neuron_predictor.delete_endpoint()"
+    "!rm -rf compilation_artifacts {model_dir} {model_neuron_dir}"
    ]
   }
  ],
