--- a/cost_optimization/ptn_4_ml-inference-chip/inf1-bert-compile-and-deploy.ipynb
+++ b/cost_optimization/ptn_4_ml-inference-chip/inf1-bert-compile-and-deploy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8fec4d50",
+   "id": "b0fa4989",
    "metadata": {},
    "source": [
     "# Compiling HuggingFace models for AWS Inferentia"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "306013af",
+   "id": "9c8fc22c",
    "metadata": {},
    "source": [
     "AWS Inferentia는 저렴한 비용으로 높은 처리량(throughput)과 짧은 레이턴시(low latency)의 추론 성능을 제공하기 위해 AWS에서 개발한 머신 러닝 추론 칩입니다. Inferentia 칩은 최신형 커스텀 2세대 Intel® Xeon® 프로세서 및 100Gbps 네트워킹과 결합되어 머신 러닝 추론 애플리케이션을 위한 고성능 및 업계에서 가장 낮은 비용을 제공합니다. AWS Inferentia 기반 Amazon EC2 Inf1 인스턴스는 Inferentia 칩에서 머신 러닝 모델을 컴파일&최적화할 수 있는 AWS Neuron 컴파일러, 런타임 및 프로파일링 도구가 포함되어 있습니다.\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6f1f8ac",
+   "id": "3e4be91e",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab7f502",
+   "id": "b100ddd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06037498",
+   "id": "2657ac5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d22280e4",
+   "id": "b750e7c0",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c09ee8e9",
+   "id": "242d03c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,16 +91,17 @@
     "import json\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, AutoConfig\n",
     "from src.inference import model_fn, input_fn, predict_fn, output_fn\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "model_id = 'bert-base-cased-finetuned-mrpc'\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_id, return_dict=False)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_id, return_dict=False).eval().to(device)\n",
     "models = model, tokenizer"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42a6ede8",
+   "id": "736400f5",
    "metadata": {},
    "source": [
     "### Understanding our inference code\n",
@@ -113,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3085f066",
+   "id": "49a7ab51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75625d02",
+   "id": "87c3d08f",
    "metadata": {},
    "source": [
     "#### For Inf1 instnace\n",
@@ -134,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aeb2dab",
+   "id": "216786d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62bfa646",
+   "id": "451b99cc",
    "metadata": {},
    "source": [
     "문장 유사도를 판별하기 위한 3개의 샘플 문장들입니다."
@@ -152,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4f5541e",
+   "id": "7a719e39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71fd00cf",
+   "id": "ecedb10c",
    "metadata": {},
    "source": [
     "모델 추론 결과를 확인합니다. SageMaker 호스팅 인스턴스에 배포하기 위한 인터페이스를 구현 후 디버깅하는 것이 좋은 전략입니다."
@@ -172,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "733c9cd7",
+   "id": "8132a2f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb444a4",
+   "id": "09ed7f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "938f7e7b",
+   "id": "b0085d4e",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -215,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceb88dc7",
+   "id": "6dcc1044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcafcf3",
+   "id": "7c9d926a",
    "metadata": {},
    "source": [
     "`model_neuron.graph`로 CPU에서 실행 중인 부분과 가속기에서 실행 중인 부분을 확인할 수 있습니다."
@@ -248,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b3217c1",
+   "id": "6f5a03e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd6d144",
+   "id": "87985a5f",
    "metadata": {},
    "source": [
     "Neuron으로 컴파일된 모델과 일반 인스턴스에서 사용할 0바이트의 더미 모델을 각각 `model.tar.gz`로 아카이빙하여 S3로 복사합니다."
@@ -267,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfc06661",
+   "id": "8f436416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "513d2ff7",
+   "id": "e4d40b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b433d5b",
+   "id": "c41828aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13e5878",
+   "id": "7697dfb6",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -346,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0b07308",
+   "id": "244ef854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd56b58",
+   "id": "d6f6bc2f",
    "metadata": {},
    "source": [
     "### [Optional] Deploying Model on Local\n",
@@ -366,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b60c9a1",
+   "id": "3afd03bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b9faa9",
+   "id": "47502a05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aac9a820",
+   "id": "e0744231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82d53753",
+   "id": "9a0a4dae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0055104a",
+   "id": "6b52de01",
    "metadata": {},
    "source": [
     "### Deploying Model on g4dn Instance"
@@ -443,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7bb881",
+   "id": "6230d91d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08eca2ee",
+   "id": "9f24c38f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf9f09b",
+   "id": "048245d2",
    "metadata": {},
    "source": [
     "### Deploying Model on Inf1 Instance"
@@ -504,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "416705e6",
+   "id": "13112309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75caeda8",
+   "id": "a25ae3b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7ab33b",
+   "id": "def8ce2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9763ac",
+   "id": "f349f0d6",
    "metadata": {},
    "source": [
     "### Wait for the endpoint jobs to complete\n",
@@ -566,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76e1a40f",
+   "id": "3fefb480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "464e6c2b",
+   "id": "00596e13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952e8161",
+   "id": "0a9a96cd",
    "metadata": {},
    "source": [
     "### Inference Test\n",
@@ -596,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9314ee8",
+   "id": "a10e5631",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "541ce73b",
+   "id": "973b55b3",
    "metadata": {},
    "source": [
     "#### For g4dn instance"
@@ -616,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23398851",
+   "id": "b8fbca3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b7aa502",
+   "id": "c766d4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018b834a",
+   "id": "5f93d52a",
    "metadata": {},
    "source": [
     "#### For Inf1 instance"
@@ -648,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b65e3214",
+   "id": "d4f4ea9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f97d84d",
+   "id": "d286138f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b427dc5b",
+   "id": "1872534b",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -685,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a00c482e",
+   "id": "16166a67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "072be2ff",
+   "id": "d28166b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b599bd",
+   "id": "d0cfd9ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2013a19c",
+   "id": "75ce4c37",
    "metadata": {},
    "source": [
     "### For g4dn instance"
@@ -760,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faf7c538",
+   "id": "41755493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "847fba14",
+   "id": "533cf7c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d82e94",
+   "id": "bfd18cb4",
    "metadata": {},
    "source": [
     "### For Inf1 instnace"
@@ -874,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d050789c",
+   "id": "1a20c241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0936ead8",
+   "id": "e2f75bad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b4465fd",
+   "id": "e7a2bd7d",
    "metadata": {},
    "source": [
     "### Wrap-up\n",
@@ -990,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2181ea8",
+   "id": "adfbe930",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -1002,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7139c819",
+   "id": "36b664c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed7577ae",
+   "id": "40fa7b05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,9 +1027,9 @@
  "metadata": {
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "conda_pytorch_latest_p37",
+   "display_name": "conda_pytorch_p38",
    "language": "python",
-   "name": "conda_pytorch_latest_p37"
+   "name": "conda_pytorch_p38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1040,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
